--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 任意选一个你喜欢的整数，这能帮你得到稳定的结果\n",
@@ -44,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 这个项目设计来帮你熟悉 python list 和线性代数\n",
@@ -84,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 返回矩阵的行数和列数\n",
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +110,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -124,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 每个元素四舍五入到特定小数数位\n",
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +155,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.258s\n",
       "\n",
       "OK\n"
      ]
@@ -167,8 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 计算矩阵的转置\n",
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +197,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.009s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -207,8 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则raise ValueError\n",
@@ -221,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +242,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.042s\n",
+      "Ran 1 test in 0.082s\n",
       "\n",
       "OK\n"
      ]
@@ -275,8 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
@@ -286,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +309,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -318,8 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO r1 <---> r2\n",
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +355,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -352,8 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO r1 <--- r1 * scale\n",
@@ -367,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -389,8 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO r1 <--- r1 + r2*scale\n",
@@ -401,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +430,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -634,18 +654,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-46-30834a6ddcff>, line 16)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-30834a6ddcff>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    return None\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
     "\n",
@@ -661,18 +674,62 @@
     "    返回None，如果 A 为奇异矩阵\n",
     "\"\"\"\n",
     "def gj_Solve(A, b, decPts=4, epsilon=1.0e-16):\n",
+    "    # 检查A，b是否行数相同\n",
     "    if len(A) != len(b):\n",
     "        return None\n",
-    "    Ab = augmentMatrix(A, b)"
+    "\n",
+    "    # 构造增广矩阵Ab\n",
+    "    Ab = augmentMatrix(A, b)\n",
+    "\n",
+    "    for j in range(len(Ab)):\n",
+    "        dic = {}\n",
+    "        for i in range(j, len(Ab)):\n",
+    "            dic[i] = abs(Ab[i][j])\n",
+    "\n",
+    "        # 寻找列c中 对角线以及对角线以下所有元素（行 c~N）的绝对值的最大值\n",
+    "        max_value_key = max(dic.items(), key=lambda x: x[1])[0]\n",
+    "        max_value = max(dic.items(), key=lambda x: x[1])[1]\n",
+    "\n",
+    "        # 如果绝对值最大值为0, 那么A为奇异矩阵，返回None\n",
+    "        if max_value < epsilon:\n",
+    "            return None\n",
+    "\n",
+    "        if (len(dic)) != 1 and j != max_value_key:\n",
+    "            swapRows(Ab, j, max_value_key)\n",
+    "\n",
+    "        # 当前列的对角线元素缩放为1\n",
+    "        Ab[j] = [x / Ab[j][j] for x in Ab[j]]\n",
+    "\n",
+    "        # 当前列的其他元素消为0\n",
+    "        for i in range(j):\n",
+    "            addScaledRow(Ab, i, j, -1 * (Ab[i][j] / Ab[j][j]))\n",
+    "\n",
+    "        for i in range(j + 1, len(Ab)):\n",
+    "            addScaledRow(Ab, i, j, -1 * (Ab[i][j] / Ab[j][j]))\n",
+    "\n",
+    "    # 每个元素四舍五入到特定小数数位\n",
+    "    matxRound(Ab, decPts)\n",
+    "\n",
+    "    return [[x[-1]] for x in Ab]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 2.924s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# 运行以下代码测试你的 gj_Solve 函数\n",
     "%run -i -e test.py LinearRegressionTestCase.test_gj_Solve"
@@ -1081,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
